[metadata]
description-file = README.rst

[extract_messages]
keywords = esri ArcGIS Server
add_comments = TRANSLATORS:
output_file = i18n/ckanext-agsview.pot
width = 80

[init_catalog]
domain = ckanext-agsview
input_file = i18n/ckanext-agsview.pot
output_dir = i18n

[update_catalog]
domain = ckanext-agsview
input_file = i18n/ckanext-agsview.pot
output_dir = i18n
previous = true

[compile_catalog]
domain = ckanext-agsview
directory = i18n
statistics = true
